RESOLVED FIXED248996
[WPE] Non-unified build fix at MediaRecorderProvider
https://bugs.webkit.org/show_bug.cgi?id=248996
Summary [WPE] Non-unified build fix at MediaRecorderProvider
Carlos Alberto Lopez Perez
Reported 2022-12-08 17:18:28 PST
The following build error when trying to build WPE with this non-default switches: $ Tools/Scripts/build-webkit --wpe --no-fatal-warnings --no-experimental-features --cmakeargs='-DENABLE_WPE_QT_API=OFF -DENABLE_THUNDER=OFF -DENABLE_DOCUMENTATION=OFF -DENABLE_INTROSPECTION=OFF -DUSE_SOUP2=ON -DUSE_AVIF=OFF -DUSE_GSTREAMER_TRANSCODER=OFF' [...] In file included from /usr/include/c++/10/memory:83, from WTF/Headers/wtf/StdLibExtras.h:30, from WTF/Headers/wtf/FastMalloc.h:26, from ../../Source/WebCore/config.h:59, from ../../Source/WebCore/Modules/mediarecorder/MediaRecorderProvider.cpp:26, from WebCore/DerivedSources/unified-sources/UnifiedSource-cbdfe323-20.cpp:1: /usr/include/c++/10/bits/unique_ptr.h: In instantiation of ‘void std::default_delete<_Tp>::operator()(_Tp*) const [with _Tp = WebCore::MediaRecorderPrivate]’: /usr/include/c++/10/bits/unique_ptr.h:361:17: required from ‘std::unique_ptr<_Tp, _Dp>::~unique_ptr() [with _Tp = WebCore::MediaRecorderPrivate; _Dp = std::default_delete<WebCore::MediaRecorderPrivate>]’ ../../Source/WebCore/Modules/mediarecorder/MediaRecorderProvider.cpp:52:12: required from here /usr/include/c++/10/bits/unique_ptr.h:83:16: error: invalid application of ‘sizeof’ to incomplete type ‘WebCore::MediaRecorderPrivate’ 83 | static_assert(sizeof(_Tp)>0, | ^~~~~~~~~~~
Attachments
Carlos Alberto Lopez Perez
Comment 1 2022-12-08 17:28:43 PST
EWS
Comment 2 2022-12-09 06:55:30 PST
Committed 257623@main (62a1022e05c6): <https://commits.webkit.org/257623@main> Reviewed commits have been landed. Closing PR #7366 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.