Cherry-pick 257623@main (62a1022e05c6). https://bugs.webkit.org/show_bug.cgi?id=248996

[WPE] Non-unified build fix at MediaRecorderProvider
    https://bugs.webkit.org/show_bug.cgi?id=248996

    Reviewed by Xabier Rodriguez-Calvar.

    Add missing include to avoid incomplete type build error.

    * Source/WebCore/Modules/mediarecorder/MediaRecorderProvider.cpp:

    Canonical link: https://commits.webkit.org/257623@main